# hipe-insalyon

./: .gitignore  main.py  pyproject.toml
.claude/: settings.json
data/: v1_baseline_train_test_ids.csv
hipe/: __init__.py
notebooks/: HIPE2026_MASK_Experiments_Colab.md  HIPE_MASK.ipynb
reports/: all_results.json  methods_report.md
scripts/: aggregate_results.py  analyze_predictions.py  analyze_stacker_components.py  apply_sd_overrides.py  bootstrap_confidence.py  build_per_language_ensemble.py  build_retrieval_index.py  build_three_way_ensemble.py  collect_all_results.py  combine_split_predictions.py  compare_prompt_variants.py  disagreement_analysis.py  discover_probable_subgroups.py  enrich_test_set.py  establish_baseline.py  eval_at_ensemble.py  eval_at_with_llama.py  eval_classical_only.py  eval_frugal_ensembles.py  eval_isat_ensemble.py  eval_mdeberta_routing.py  eval_stacker_cv.py  eval_xlm_roberta_ensemble.py  extract_mask_embeddings.py  extract_spectral_features.py  fetch_data.py  generate_methods_report.py  generate_report.py  make_submission.py  make_submission_batch.py  mask_grid_eval.py  mask_same_split_eval.py  phase0_explore.py  phase0_mask_diagnostics.py  rebuild_at_stacker_on_md_split.py  render_sd_rules.py  reparse_predictions.py  retrieval_sanity_check.py  rf_with_sd_features.py  run_agentic_pipeline.py  (+18 more)
submissions/: INSALyon_HIPE-2026-v1.0-impresso-test-de_run1.jsonl  INSALyon_HIPE-2026-v1.0-impresso-test-en_run1.jsonl  INSALyon_HIPE-2026-v1.0-impresso-test-fr_run1.jsonl  INSALyon_model_info.txt  RUNS_MANIFEST.md
tests/: test_ensembles.py  (+11 more)
(+671 files in other folders)
