[project]
name = "hipe"
version = "0.1.0"
description = "HIPE-2026 person-place relation extraction from historical newspapers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "orjson>=3.10",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]
llm = [
    "openai>=1.40",
    "anthropic>=0.34",
    "tiktoken>=0.7",
]
nlp = [
    "spacy>=3.7",
    "py-heideltime>=0.1.6 ; sys_platform != 'win32'",
]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "umap-learn>=0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hipe"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
